@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/gnomeradio
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.1 2002/07/16 13:50:00 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.2 2002/07/25 23:20:26 spider Exp $
+
+*gnomeradio-1.2.1 (26 Jul 2002)
+  26 Jul 2002; Spider <spider@gentoo.org> gnomeradio-1.2.1.ebuild:
+  eclassified, new version
 
 *gnomeradio-1.2 (16 Jul 2002)
 
